--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -33,8 +33,8 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #3ada1a,
-  secondary:  #d532db,
+  primary:    #9c5bbb,
+  secondary:  #32db64,
   danger:     #f53d3d,
   light:      #ffffff,
   dark:       #222
