--- a/src/pages/news-feed/news-feed.scss
+++ b/src/pages/news-feed/news-feed.scss
@@ -2,4 +2,15 @@ page-news-feed {
     iframe{
         outline-style: none;
     }
+    .title {
+    }
+    .subtitle {
+        min-height: 20px;
+        .toolbar-title-md {
+            font-size: 1.0rem;
+        }
+        .toolbar-title-ios {
+            font-size: 1.0rem;
+        }
+    }
 }
