--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -33,8 +33,8 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #0040ff,
-  secondary:  #57ff00,
+  primary:    #1985ff,
+  secondary:  #45d62d,
   danger:     #f53d3d,
   light:      #ffffff,
   dark:       #222
