fixes and breakfsat rooms

--- a/src/pages/meine-gruppe/meine-gruppe.scss
+++ b/src/pages/meine-gruppe/meine-gruppe.scss
@@ -1,3 +1,5 @@
 page-meine-gruppe {
     .center  { text-align: center; }
+    .frühstück {margin-top: 40px; font-size: 20px; text-align: center; font-weight: bold; text-decoration: underline; }
+    .treffpunkt {font-size: 16px; text-align: center; }
 }
