added color chaging button and frühstück treffpunkte

--- a/src/pages/meine-gruppe/meine-gruppe.scss
+++ b/src/pages/meine-gruppe/meine-gruppe.scss
@@ -1,5 +1,5 @@
 page-meine-gruppe {
-    .center  { text-align: center; }
-    .frühstück {margin-top: 40px; font-size: 20px; text-align: center; font-weight: bold; text-decoration: underline; }
-    .treffpunkt {font-size: 16px; text-align: center; }
+    .center  { text-align: center; text-decoration: underline; }
+    .frühstück {margin-top: 40px; margin-bottom: 10px; font-size: 20px; text-align: center; font-weight: bold; text-decoration: underline; }
+    .treffpunkt {margin-top: 10px; font-size: 14px; text-align: center; }
 }
