added whats app buttons

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -37,7 +37,8 @@ $colors: (
   secondary:  #45d62d,
   danger:     #f53d3d,
   light:      #ffffff,
-  dark:       #222
+  dark:       #222,
+  whatsapp:   #075e54
 );
 
 $tabs-background: color($colors, primary);
