--- a/src/pages/meine-gruppe/meine-gruppe.scss
+++ b/src/pages/meine-gruppe/meine-gruppe.scss
@@ -1,5 +1,6 @@
 page-meine-gruppe {
-    .center  { text-align: center; text-decoration: underline; }
+    .center  {  }
     .frühstück {margin-top: 40px; margin-bottom: 10px; font-size: 20px; text-align: center; font-weight: bold; text-decoration: underline; }
     .treffpunkt {margin-top: 10px; font-size: 14px; text-align: center; }
+    .centerbutton { text-align: center; }
 }
