fixed karaoke vote and karaoke song text

--- a/src/pages/meine-gruppe/meine-gruppe.scss
+++ b/src/pages/meine-gruppe/meine-gruppe.scss
@@ -1,6 +1,7 @@
 page-meine-gruppe {
     .center  {  }
     .frühstück {margin-top: 40px; margin-bottom: 10px; font-size: 20px; text-align: center; font-weight: bold; text-decoration: underline; }
-    .treffpunkt {margin-top: 10px; font-size: 14px; text-align: center; }
+    .treffpunkt {margin-top: 10px; margin-bottom: 10%; font-size: 14px; text-align: center; }
     .centerbutton { text-align: center; }
+    .songtitel {margin-bottom: 10px; font-size: 20px; text-align: center; font-weight: bold; text-decoration: underline; }
 }
